fix: fixed tests